--- a/react-webpack4/src/styles.css
+++ b/react-webpack4/src/styles.css
@@ -14,8 +14,19 @@
     overflow: hidden;
     background-color: #333;
   }
+  #logout-button{
+    border: none;
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+    overflow: hidden;
+    background-color: #333;
+  }
   #navli {
     float: left;
+  }
+  #navli-right {
+    float: right;
   }
   li p {
     display: block;
